<resources>
    <string name="app_name">CodeScanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_scan_image">Scan Image</string>
    <string name="menu_favs">Favorites</string>

    <string name="menu_history">History</string>
    <string name="menu_saved_qr">Created QR</string>
    <string name="menu_create_qr">Create New QR</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_share_app">Share this App</string>
    <string name="menu_remove_ads">Remove ADS</string>

</resources>