<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_code_scanner"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_scan_image"
            android:icon="@drawable/ic_scan_doc"
            android:title="@string/menu_scan_image" />
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/ic_fav"
            android:title="@string/menu_favs" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_saved_qr"
            android:icon="@drawable/ic_qr"
            android:title="@string/menu_saved_qr" />
        <item
            android:id="@+id/nav_create_qr"
            android:icon="@drawable/ic_new_qr"
            android:title="@string/menu_create_qr" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_share_app" />
        <item
            android:id="@+id/remove_ads"
            android:icon="@drawable/ic_remove_ads"
            android:title="@string/menu_remove_ads" />
    </group>
</menu>