<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_scan">

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.manegow.codescanner.ui.created_qr.CreatedQRFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_scan_image"
        android:name="com.manegow.codescanner.ui.scan_image.ScanImageFragment"
        android:label="@string/menu_scan_image"
        tools:layout="@layout/fragment_scan_image" />

    <fragment
        android:id="@+id/nav_favs"
        android:name="com.manegow.codescanner.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favs"
        tools:layout="@layout/fragment_favorites" />
</navigation>